Add manifest entry to allow newer JRE to work